@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-09T08:14:42Z",
+  "timestamp" : "2023-07-10T01:15:09Z",
   "count_outdated" : 128,
   "uniques_outdated" : 108,
-  "count" : 145,
-  "uniques" : 120,
+  "count" : 146,
+  "uniques" : 121,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -43,12 +43,12 @@
     },
     {
       "timestamp": "2023-07-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
