@@ -1,6 +1,6 @@
 {
-  "count": 17,
-  "uniques": 9,
+  "count": 18,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2023-07-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
